# shachain2pc

./: .gitignore  Makefile  README.md  RUST_PORT_PLAN.md  flake.nix
compat/: ag2pc-session-v1.md
compat/ag2pc/: csw-helper-v1.json  mitccrh-helper-v1.json  softspoken-helper-v1.json
compat/v1/: spec.toml
compat/v1/probes/: cpp-compat-probe.jsonl
demo/: batch_check.sh  cache_tamper_test.sh  chunk_check.sh  cross_mode_smoke.sh  cross_mode_tamper_smoke.sh  gen_circuit.cpp  measure_batch.sh  measure_cache.sh  measure_chunk.sh  measure_cross.sh  measure_tree.sh  party.cpp  run_cheat.sh  run_demo.sh  tamper_test.sh
docs/: ag2pc-abort-audit.md  authenticated-frontier-import-plan.md  daemon-implementation-report.md  daemon-integration-test-plan.md  daemon-service-plan.md  mpc-message-boundaries.md  mpc-protocol-refactor-plan.md  new-emp-ag2pc-notes.md  recursive-tile-cache-plan.md  rust-ag2pc-transition-plan.md  rust-cross-mode-status.md  rust-sync-plan.md  shared-trunk-cache.md
patches/: README.md  emp-ag2pc-546d5e4-align-prg-random-data.patch
protocol/: bristol.cpp  bristol.h  circuit_gen.cpp  circuit_gen.h  wire_layout.h
reference/: ref_cli.cpp  ref_kat.cpp  shachain_ref.cpp  shachain_ref.h
run/: derive.h
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/crates/shachain2pc-circuit/: Cargo.toml  build.rs
rust/crates/shachain2pc-circuit/src/: lib.rs
rust/crates/shachain2pc-daemon/: Cargo.toml  build.rs
rust/crates/shachain2pc-daemon/proto/: daemon.proto
rust/crates/shachain2pc-daemon/src/: lib.rs
rust/crates/shachain2pc-daemon/tests/: daemon_pair.rs
rust/crates/shachain2pc-emp-compat/: Cargo.toml  build.rs
rust/crates/shachain2pc-emp-compat/src/: lib.rs
rust/crates/shachain2pc-emp-wire/: Cargo.toml  build.rs
rust/crates/shachain2pc-emp-wire/src/: lib.rs
rust/crates/shachain2pc-mpc-core/: Cargo.toml
rust/crates/shachain2pc-mpc-core/src/: lib.rs
rust/crates/shachain2pc-mpc-runner/: Cargo.toml
rust/crates/shachain2pc-mpc-runner/src/: lib.rs
rust/crates/shachain2pc-mpc-types/: Cargo.toml  build.rs
rust/crates/shachain2pc-mpc-types/proto/: mpc.proto
rust/crates/shachain2pc-mpc-types/src/: lib.rs
rust/crates/shachain2pc-party/: Cargo.toml
rust/crates/shachain2pc-party/src/: lib.rs  main.rs
rust/crates/shachain2pc-types/: Cargo.toml
rust/crates/shachain2pc-types/src/: lib.rs
tools/: ag2pc_compute_probe.cpp  ag2pc_protocol_probe.cpp  ag2pc_session_probe.cpp  ag2pc_transport_probe.cpp  ag2pc_triple_pool_probe.cpp  bootstrap-emp.sh  c2pc_dependent_probe.cpp  c2pc_independent_probe.cpp  c2pc_online_probe.cpp  check_ag2pc_probe.py  compat_probe.cpp  csw_helper_probe.cpp  csw_probe.cpp  emp_wire_probe.cpp  fpre_check_probe.cpp  fpre_generate_probe.cpp  fpre_refill_probe.cpp  fpre_setup_probe.cpp  iknp_probe.cpp  measure_io.cpp  mitccrh_helper_probe.cpp  otco_probe.cpp  probe_convention.cpp  softspoken_helper_probe.cpp  softspoken_probe.cpp  tamper_circuit.cpp  verify_circuit.cpp
util/: hex.h
