[workspace]
members = [
    "crates/shachain2pc-types",
    "crates/shachain2pc-circuit",
    "crates/shachain2pc-emp-wire",
    "crates/shachain2pc-emp-compat",
    "crates/shachain2pc-party",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
aes = { version = "0.8", features = ["zeroize"] }
openssl = "0.10"
sha2 = "0.10"
serde_json = "1"
tokio = "1"
zeroize = "1"

[profile.release]
lto = "thin"
codegen-units = 1
