[package]
name = "shachain2pc-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
hmac = "0.12"
openssl.workspace = true
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
shachain2pc-circuit = { path = "../shachain2pc-circuit" }
shachain2pc-emp-compat = { path = "../shachain2pc-emp-compat" }
shachain2pc-emp-wire = { path = "../shachain2pc-emp-wire" }
shachain2pc-mpc-runner = { path = "../shachain2pc-mpc-runner" }
shachain2pc-party = { path = "../shachain2pc-party" }
shachain2pc-types = { path = "../shachain2pc-types" }
tokio-stream = "0.1"
tokio = { workspace = true, features = [
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
tonic = { version = "0.12", features = ["transport"] }
zeroize.workspace = true

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = [
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "shachain-daemon"
path = "src/bin/shachain-daemon.rs"

[[bin]]
name = "shachain-cli"
path = "src/bin/shachain-cli.rs"
