[package]
name = "shachain2pc-emp-compat"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aes.workspace = true
openssl.workspace = true
sha2.workspace = true
shachain2pc-emp-wire = { path = "../shachain2pc-emp-wire" }

[dev-dependencies]
serde_json.workspace = true

[lib]
path = "src/lib.rs"
