[package]
name = "shachain2pc-emp-compat"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[features]
cpp-probes = []

[dependencies]
aes.workspace = true
openssl.workspace = true
sha2.workspace = true
shachain2pc-emp-wire = { path = "../shachain2pc-emp-wire" }
shachain2pc-types = { path = "../shachain2pc-types" }
tokio = { workspace = true, features = ["macros"] }
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }

[lib]
path = "src/lib.rs"
