[package]
name = "shachain2pc-emp-wire"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[features]
cpp-probes = []

[dependencies]
shachain2pc-types = { path = "../shachain2pc-types" }
tokio = { workspace = true, features = ["io-util", "net", "time"] }
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }

[lib]
path = "src/lib.rs"
