[package]
name = "shachain2pc-mpc-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aes.workspace = true
sha2 = { workspace = true }
shachain2pc-emp-wire = { path = "../shachain2pc-emp-wire" }
shachain2pc-mpc-types = { path = "../shachain2pc-mpc-types" }
shachain2pc-types = { path = "../shachain2pc-types" }
zeroize = { workspace = true }

[lib]
path = "src/lib.rs"
