[package]
name = "shachain2pc-mpc-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
prost = "0.13"
shachain2pc-types = { path = "../shachain2pc-types" }
zeroize.workspace = true

[build-dependencies]
prost-build = "0.13"

[lib]
path = "src/lib.rs"
