[package]
name = "shachain2pc-party"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shachain2pc-circuit = { path = "../shachain2pc-circuit" }
shachain2pc-emp-compat = { path = "../shachain2pc-emp-compat" }
shachain2pc-emp-wire = { path = "../shachain2pc-emp-wire" }
shachain2pc-mpc-core = { path = "../shachain2pc-mpc-core" }
shachain2pc-types = { path = "../shachain2pc-types" }
tokio = { workspace = true, features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
zeroize.workspace = true

[[bin]]
name = "party"
path = "src/main.rs"
